--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
 version: "3.8"
-
 services:
   letsencrypt:
     build: .
     restart: always
-    network_mode: "host" 
+    network_mode: "host"
     volumes:
       - ./certs:/root/.cache
     environment:
       - DOMAIN=api.dionis.cloud
+    ports:
+      - "80:80"
+      - "443:443"
+    cap_add:
+      - NET_BIND_SERVICE
